--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="url_sortedby_latest">latest</string>
     <string name="url_sortedby_popular">popular</string>
 
+    <string name="appwidget_text">NOT AN OFFICIAL COPY</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 
